[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Map/activables/troncoFuego.png" type="Texture" id=1]
[ext_resource path="res://Level/Activables/Destruir.gd" type="Script" id=2]
[ext_resource path="res://Assets/Map/luces/light.png" type="Texture" id=3]
[ext_resource path="res://Level/Activables/Rebote.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Destroy",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 16.124
height = 78.476

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 52, 16 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12.235, 63.494 )

[node name="Tronco" type="StaticBody2D"]
z_index = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "Idle"

[node name="Destruir" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destruir"]
shape = SubResource( 9 )

[node name="Light2D" type="Light2D" parent="Destruir"]
scale = Vector2( 0.527, 1.421 )
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.25
color = Color( 0.74902, 0.231373, 0.0509804, 1 )
energy = 4.07

[node name="Rebote1" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rebote1"]
position = Vector2( 100, 48 )
shape = SubResource( 10 )

[node name="Rebote2" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rebote2"]
position = Vector2( -100, 48 )
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )
[connection signal="area_entered" from="Destruir" to="Destruir" method="_on_Destruir_area_entered"]
[connection signal="body_exited" from="Rebote1" to="Rebote1" method="_on_Rebote1_body_exited"]
[connection signal="body_exited" from="Rebote2" to="Rebote2" method="_on_Rebote1_body_exited"]
